--- a/index.html
+++ b/index.html
@@ -138,5 +138,279 @@
             <img class="picture" src="./imgs/emblem.svg" alt="picture">
         </div>
     </header>
+
+<!-------------------------------------------------------------------------------------------------------->
+<div class="main_content">
+    
+    
+    <div class="sidebar">
+        <h3 class="filter">
+            Фильтры
+        </h3>
+        <form method="post" action="https://fom.in.ua/echo">
+            <div class="sidebar__search">
+                <h3>
+                    Производитель
+                </h3>
+                <p>
+                    <input type="checkbox"  name="Apple"/>
+                    Apple
+                </p>
+                <p>
+                    <input type="checkbox"  name="Samsung"/>
+                    Samsung
+                </p>
+                <p>
+                    <input type="checkbox"  name="Xiaomi"/>
+                    Xiaomi
+                </p>
+                <p>
+                    <input type="checkbox"  name="Huawei"/>
+                    Huawei
+                </p>
+                <p>
+                    <input type="checkbox"  name="Nokia"/>
+                    Nokia
+                </p>
+            </div>
+            <div class="sidebar__search">
+                <h3>
+                    Цена
+                </h3>
+                <p>
+                    <input type="number" name="Цена от" min="1000" max="60000" step="100">
+                    <input type="number" name="Цена до" min="1000" max="60000" step="100">
+                </p>
+            </div>
+            <div class="sidebar__search">
+                <h3>
+                    Диагональ экрана
+                </h3>
+                <p>
+                    <input type="checkbox"  name="Диагональ экрана 4.7"/>
+                    4.7"
+                </p>
+                <p>
+                    <input type="checkbox"  name=" Диагональ экрана5.4"/>
+                    5.4"
+                </p>
+                <p>
+                    <input type="checkbox"  name="Диагональ экрана 6.1"/>
+                    6.1"
+                </p>
+                <p>
+                    <input type="checkbox"  name="Диагональ экрана 6.5"/>
+                    6.5"
+                </p>
+                <p>
+                    <input type="checkbox"  name="Диагональ экрана 6.7"/>
+                    6.7
+                </p>
+            </div> 
+            <div class="sidebar__search">
+                <h3>
+                    Количество камер
+                </h3>
+                <p>
+                    <input type="checkbox"  name="Количество камер 1"/>
+                    1
+                </p>
+                <p>
+                    <input type="checkbox"  name="Количество камер 2"/>
+                    2
+                </p>
+                <p>
+                    <input type="checkbox"  name="Количество камер 3"/>
+                    3
+                </p>
+                <p>
+                    <input type="checkbox"  name="Количество камер 4"/>
+                    4
+                </p>
+            </div>
+            <div class="sidebar__search">
+                <h3>
+                    Объем встроенной памяти
+                </h3>
+                <p>
+                    <input type="checkbox"  name="Память 64 Гб"/>
+                    64 Гб
+                </p>
+                <p>
+                    <input type="checkbox"  name="Память 128 Гб"/>
+                    128 Гб
+                </p>
+                <p>
+                    <input type="checkbox"  name="Память 256 Гб"/>
+                    256 Гб
+                </p>
+                <p>
+                    <input type="checkbox"  name="Память 512 Гб"/>
+                    512 Гб
+                </p>
+            </div>
+            <p class="submit"> 
+                <input type="submit" name="submit" value="Поиск">
+            </p>  
+        </form>
+    </div>
+    <div class="caption">
+        <h3 class="caption__text">Добро пожаловать в интернет – магазин цифровой техники и бытовой электроники 
+            <span id="allo">
+                allo.ua
+            </span>
+            !
+        </h3> 
+    </div>    
+    <div class="section__phone">
+      <div class="card">
+        <div class="card__phone">
+            <header class="header__card">
+                Apple
+            </header>
+            <main>
+                <img src="./imgs/apple_aphone_13_pro.jpg" alt="phone" class="img_phone">
+                <h3 class="desc__card">
+                    Apple iPhone 13 Pro Max 128GB Blu
+                </h3>
+                <p class="price">
+                    45 999грн
+                </p>
+            </main>
+            <footer class="input__card">
+                <input class="btn" type="button" name="button1" value="купить" />
+                <input class="btn" type="button" name="button1" value="уточнить цену" />
+            </footer>
+        </div>
+        <div class="card__phone">
+            <header class="header__card">
+                Apple
+            </header>
+            <main>
+                <img src="./imgs/apple_iphone_13_promax.jpg" alt="phone" class="img_phone">
+                <h3 class="desc__card">
+                    Apple iPhone 13 Pro 256GB Gold
+                </h3>
+                <p class="price">
+                    45 999грн
+                </p>
+            </main>
+            <footer class="input__card">
+                <input class="btn" type="button" name="button1" value="купить" />
+                <input class="btn" type="button" name="button1" value="уточнить цену" />
+            </footer>
+        </div>
+        <div class="card__phone">
+            <header class="header__card">
+                Apple
+            </header>
+            <main>
+                <img src="./imgs/apple_iphone_13_mini.jpg" alt="phone" class="img_phone">
+                <h3 class="desc__card">
+                    Apple iPhone 13 mini 128GB RED
+                </h3>
+                <p class="price">
+                    27 999грн
+                </p>
+            </main>
+            <footer class="input__card">
+                <input class="btn"  type="button" name="button1" value="купить" />
+                <input class="btn" type="button" name="button1" value="уточнить цену" />
+            </footer>
+        </div>
+        <div class="card__phone">
+            <header class="header__card">
+                Apple
+            </header>
+            <main>
+                <img src="./imgs/apple_ipone_13.jpg" alt="phone" class="img_phone">
+                <h3 class="desc__card">
+                    Apple iPhone 13 256GB Midnight
+                </h3>
+                <p class="price">
+                    27 999грн
+                </p>
+            </main>
+            <footer class="input__card">
+                <input class="btn" type="button" name="button1" value="купить" />
+                <input class="btn" type="button" name="button1" value="уточнить цену" />
+            </footer>
+        </div>
+        <div class="card__phone">
+            <header class="header__card">
+                Apple
+            </header>
+            <main>
+                <img src="./imgs/apple_iphone_11.jpg" alt="phone" class="img_phone">
+                <h3 class="desc__card">
+                    Apple iPhone 11 Pro 128GB Green
+                </h3>
+                <p class="price">
+                    24 999грн
+                </p>
+            </main>
+            <footer class="input__card">
+                <input class="btn" type="button" name="button1" value="купить" />
+                <input class="btn" type="button" name="button1" value="уточнить цену" />
+            </footer>
+        </div>
+        <div class="card__phone">
+            <header class="header__card">
+                Apple
+            </header>
+            <main>
+                <img src="./imgs/apple_iphone_11_promax.jpg" alt="phone" class="img_phone">
+                <h3 class="desc__card">
+                    Apple iPhone 11 Pro Max 256GB Gold
+                </h3>
+                <p class="price">
+                    41 999грн
+                </p>
+            </main>
+            <footer class="input__card">
+                <input class="btn" type="button" name="button1" value="купить" />
+                <input class="btn" type="button" name="button1" value="уточнить цену" />
+            </footer>
+        </div>
+        <div class="card__phone">
+            <header class="header__card">
+                Apple
+            </header>
+            <main>
+                <img src="./imgs/apple_iphone_12_promax.jpg" alt="phone" class="img_phone">
+                <h3 class="desc__card">
+                    Apple iPhone 13 Pro 512GB Graphite
+                </h3>
+                <p class="price">
+                    50 999грн
+                </p>
+            </main>
+            <footer class="input__card">
+                <input class="btn" type="button" name="button1" value="купить" />
+                <input class="btn" type="button" name="button1" value="уточнить цену" />
+            </footer>
+        </div>
+        <div class="card__phone">
+            <header class="header__card">
+                Apple
+            </header>
+            <main>
+                <img src="./imgs/apple_iphone_se.jpg" alt="phone" class="img_phone">
+                <h3 class="desc__card">
+                    Apple iPhone se 64GB Red Neverlock
+                </h3>
+                <p class="price">
+                    16 999грн
+                </p>
+            </main>
+            <footer class="input__card">
+                <input class="btn" type="button" name="button1" value="купить" />
+                <input class="btn" type="button" name="button1" value="уточнить цену" />
+            </footer>
+        </div>
+      </div>
+    </div>
+</div> 
+
 </body>
 </html>
