Added a radius and border to the phone section

--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
 
 </head>
 <body>
+    <!--Секция меню-->
     <header class="header">
         <ul class="nav">
             <li class="nav__item">
-                <a href="" class="nav__link">
+                <a href="#" class="nav__link">
                     Главная
                 </a>
                 <ul class="dropdown">
@@ -38,7 +39,7 @@
                 </ul>
             </li>
             <li class="nav__item">
-                <a href="" class="nav__link">
+                <a href="#" class="nav__link">
                     Телефоны
                 </a>
                 <ul class="dropdown">
@@ -70,7 +71,7 @@
                 </ul>
             </li>
             <li class="nav__item">
-                <a href="" class="nav__link">
+                <a href="#" class="nav__link">
                     Акции
                 </a>
                     <ul class="dropdown">
@@ -92,7 +93,7 @@
                     </ul>
             </li>
             <li class="nav__item">
-                <a href="" class="nav__link">
+                <a href="#" class="nav__link">
                     Услуги
                 </a>
                 <ul class="dropdown">
@@ -114,7 +115,7 @@
                 </ul>
             </li>
             <li class="nav__item">
-                <a href="" class="nav__link">
+                <a href="#" class="nav__link">
                     Клиентам
                 </a>
                 <ul class="dropdown">
