changed site name

--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ALLO</title>
     <link rel="stylesheet" href="./style/reset.css">
     <link rel="stylesheet" href="./style/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet">
-    <title>Меню</title>
-
 </head>
 <body>
     <!--Секция меню-->
@@ -140,10 +139,8 @@
         </div>
     </header>
 
-<!-------------------------------------------------------------------------------------------------------->
+<!--Секция с карточками-->
 <div class="main_content">
-    
-    
     <div class="sidebar">
         <h3 class="filter">
             Фильтры
